# local-ai-platform

./: .env.connected.example  .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  compose.yaml
.github/workflows/: ci.yml
codex/: AGENTS.md  config.connected.toml.template  config.toml.template
docs/: architecture.md  article-outline.md  benchmarking.md  capability-matrix.md  connected.md  implementation-plan.md  offline.md  risks.md  security.md  troubleshooting.md  vscode.md
docs/adr/: 0001-inference-runtime.md
examples/rust-service/: Cargo.toml  Dockerfile  README.md
examples/rust-service/docs/: architecture-rules.md
examples/rust-service/helm/: Chart.yaml
examples/rust-service/helm/templates/: deployment.yaml
examples/rust-service/src/: lib.rs  main.rs
examples/rust-service/tests/: health.rs
hermes/: config.connected.example.yaml  config.container.example.yaml  config.example.yaml
litellm/: config.yaml
mcp/offline/: Dockerfile  pyproject.toml
mcp/offline/src/local_ai_offline_mcp/: __init__.py  service.py
mcp/offline/tests/: test_policy.py
postgres/: provision-mcp-role.sh
retrieval/: .dockerignore  Dockerfile  pyproject.toml
retrieval/migrations/: 001_knowledge.sql
retrieval/src/local_ai_retrieval/: __init__.py  chunker.py  config.py  db.py  embeddings.py  ingestion.py  logging_config.py  main.py  metrics.py  scanner.py  service.py
retrieval/tests/: test_chunker.py  test_db_helpers.py  test_scanner.py
scripts/: benchmark.sh  bootstrap.sh  clean.sh  configure-codex.sh  configure-connected.sh  configure-hermes.sh  connected-smoke.sh  connected-up.sh  doctor.sh  ensure-docker.sh  hermes-smoke.sh  lib.sh  lint.sh  provision-client-key.sh  provision-connected-key.sh  pull-model.sh  smoke-test.sh  status.sh  test.sh  up.sh  vscode.sh
(+11 files in other folders)
