[build-system]
requires = ["setuptools==80.10.2"]
build-backend = "setuptools.build_meta"

[project]
name = "local-ai-retrieval"
version = "0.1.0"
description = "Read-only local repository ingestion, pgvector retrieval, and MCP service"
requires-python = ">=3.11,<3.15"
dependencies = [
  "fastapi==0.139.2",
  "httpx==0.28.1",
  "mcp==1.28.1",
  "pathspec==1.1.1",
  "prometheus-client==0.25.0",
  "psycopg[binary]==3.3.4",
  "pydantic==2.13.4",
  "uvicorn==0.51.0",
]

[project.optional-dependencies]
test = ["pytest==9.1.1"]

[project.scripts]
local-ai-retrieval = "local_ai_retrieval.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
