[package]
name = "local-ai-rust-service"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
axum = "=0.8.9"
serde = { version = "=1.0.229", features = ["derive"] }
tokio = { version = "=1.53.0", features = ["macros", "net", "rt-multi-thread"] }

[dev-dependencies]
serde_json = "=1.0.150"
